# dfols

./: .gitignore  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python_testing.yml  upload_pypi.yml
dfols/: __init__.py  controller.py  diagnostic_info.py  evaluations_database.py  hessian.py  model.py  params.py  sketcher.py  solver.py  trust_region.py  util.py  version.py
dfols/tests/: test_ctrsbox.py  test_hessian.py  test_model.py  test_params.py  test_regu_model.py  test_regu_trust_region.py  test_regu_util.py  test_solver.py  test_trust_region.py  test_util.py
docs/: Makefile  advanced.rst  conf.py  contributors.rst  copy_html_to_maths.sh  history.rst  index.rst  info.rst  install.rst  make.bat  userguide.rst
docs/_build/doctrees/: advanced.doctree  diagnostic.doctree  environment.pickle  index.doctree  info.doctree  install.doctree  userguide.doctree
docs/_build/html/: .buildinfo  advanced.html  diagnostic.html  genindex.html  index.html  info.html  install.html  objects.inv  search.html  searchindex.js  userguide.html
docs/_build/html/_sources/: advanced.rst.txt  diagnostic.rst.txt  install.rst.txt  userguide.rst.txt
docs/_build/latex/: DFOLS.aux  DFOLS.fdb_latexmk  DFOLS.fls  DFOLS.ilg  DFOLS.out  DFOLS.tex  DFOLS.toc  sphinxhighlight.sty
examples/: data_fitting.py  existing_evaluations.py  nonlinear_system.py  regularisation_CB2.py  regularisation_Davidon2.py  regularisation_basic.py  regularisation_linear.py  regularized_least_squares.py  rosenbrock_basic.py  rosenbrock_bounds.py  rosenbrock_constrained.py  rosenbrock_noisy.py  sfista_time.py
